puppet-foreman_scap_client-0.3.4

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,10 @@
-puppet-foreman_scap_client              2015-02-09
+puppet-foreman_scap_client-0.3.4        2015-02-26
+ - bugfix package rubygem-foreman-scap-client installation
+
+puppet-foreman_scap_client-0.3.3        2015-02-09
  - bugfixes foreman_scap_client.cfg template distribution
 
-puppet-foreman_scap_client              2015-01-15
+puppet-foreman_scap_client-0.3.2        2015-01-15
  - new class foreman_scap_client introduced in body of puppet-openscap
  - the puppet-openscap remains live in github.com/OpenSCAP/puppet-openscap
 
