--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+puppet-foreman_scap_client-0.3.5        2015-03-03
+ - port is now mandatory parameter
+
 puppet-foreman_scap_client-0.3.4        2015-02-26
  - bugfix package rubygem-foreman-scap-client installation
 
