--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+puppet-foreman_scap_client-0.3.6        2015-04-09
+ - Support for subscription manager certificates
+
 puppet-foreman_scap_client-0.3.5        2015-03-03
  - port is now mandatory parameter
 
