--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+puppet-foreman_scap_client-0.3.7	2015-05-07
+ - Support for content automated content fetching
+
 puppet-foreman_scap_client-0.3.6        2015-04-09
  - Support for subscription manager certificates
 
